--- a/scss/style.css
+++ b/scss/style.css
@@ -58,5 +58,6 @@ h1, h2, h3, h4, h5, h6 {
 .media .media a {
   text-decoration: none;
   color: #EEE8D6;
+  text-transform: uppercase;
 }
 /*# sourceMappingURL=style.css.map */
