--- a/scss/style.scss
+++ b/scss/style.scss
@@ -69,5 +69,6 @@ a {
       .media a {
           text-decoration: none;
           color: $text-color;
+          text-transform: uppercase;
       }
   }
