new css folder with files through Watching Sass

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,8 +12,9 @@ $font-headings: 'Oswald';
 $color-item-border: $red;
 $color-media-head: $blue;
 
+$color-test: white;
 
-
+ 
 html {
     font-size: 62.5%;
   }
