add content in _mixins.scss ( $height:100vh) & picture for background ( _backgrounds.scss-@include),  some

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,6 +6,7 @@ $text-color:  #022933;
 $red: #D14348; //red;
 // $links: black;
 $blue: #0076A3;
+$yellow: yellow;
 $font-body: 'Hepta Slab';
 $font-headings: 'Oswald';
 
