--- a/css/style.css
+++ b/css/style.css
@@ -369,6 +369,41 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 auto;
 }
 
+.background {
+  color: #EEE8D6;
+  margin: 20px 0;
+  width: 100%;
+  display: table;
+}
+
+.background .container {
+  display: table-cell;
+  vertical-align: bottom;
+  padding-bottom: 20px;
+}
+
+.background .container h1 {
+  color: yellow;
+  font-family: "Oswald";
+  font-size: 5rem;
+  line-height: 105%;
+  margin-bottom: 0;
+  padding: 0 10%;
+}
+
+.background .container p {
+  padding: 0 10%;
+  margin-top: 0;
+}
+
+.jumbotron {
+  background: url("../images/pier.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  height: 500;
+}
+
 .media {
   margin: 0;
   padding: 0;
