--- a/css/style.css
+++ b/css/style.css
@@ -397,11 +397,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .jumbotron {
-  background: url("../images/pier.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.8))), url("../images/pier.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)), url("../images/pier.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  height: 500;
+  height: 500px;
+}
+
+.bridge {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.8))), url("../images/bridge.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)), url("../images/bridge.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  height: 300px;
 }
 
 .media {
