start work with extand method (new file _interface.scss, buttons, @extend .btn)

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,10 +3,11 @@
 //creating variables
 $background:  #EEE8D6;
 $text-color:  #022933; 
-$red: #D14348; //red;
+$darkblue:    #001e25;
+$red:         #D14348; //red;
 // $links: black;
-$blue: #0076A3;
-$yellow: yellow;
+$blue:        #0076A3;
+$yellow:      rgb(233,207,62);//yellow;
 $font-body: 'Hepta Slab';
 $font-headings: 'Oswald';
 
