--- a/css/style.css
+++ b/css/style.css
@@ -369,6 +369,35 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 auto;
 }
 
+.btn, .btn-default, .btn-hot, .btn-cool {
+  display: inline-block;
+  padding: 6px 12px;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  font-family: "Oswald";
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  color: #EEE8D6;
+}
+
+.btn-default {
+  background: #022933;
+}
+
+.btn-hot {
+  background: #D14348;
+}
+
+.btn-cool {
+  background: #0076A3;
+}
+
 .background {
   color: #EEE8D6;
   margin: 20px 0;
@@ -383,7 +412,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .background .container h1 {
-  color: yellow;
+  color: #e9cf3e;
   font-family: "Oswald";
   font-size: 5rem;
   line-height: 105%;
