--- a/scss/_interface.scss
+++ b/scss/_interface.scss
@@ -4,7 +4,7 @@ $color-btn-hot: $red;
 $color-btn-cool: $blue;
 
 
-.btn {
+%btn {     //with % create a Shadow class
     display: inline-block;
     padding: 6px 12px;
     text-align: center;
@@ -20,13 +20,13 @@ $color-btn-cool: $blue;
 
 .btn-default {
     background: $color-btn-default;
-    @extend .btn;
+    @extend %btn; //with % create a Shadow class
 }
 .btn-hot {
-    @extend .btn;
+    @extend %btn;//with % create a Shadow class
     background: $color-btn-hot;
 }
 .btn-cool {
-    @extend .btn;
+    @extend %btn;//with % create a Shadow class
     background: $color-btn-cool;
 }
