--- a/scss/modules/_media.scss
+++ b/scss/modules/_media.scss
@@ -3,26 +3,35 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
-    .media .item {
-        margin-bottom: 20px;
+     .item {
+        //margin-bottom: 20px;
         border-top: 1px dotted $color-item-border;
-        padding-top: 10px;;
+        padding-top: 10px;
+        padding-left: 10px;
+        padding-bottom: 10px;
+        &:hover {
+            background: $yellow;
+        }
+        &:last-of-type {
+            border-bottom: 1px dotted $color-item-border;
+        }
+        @include clearfix;
     }
-    .media .head {
+     .head {
         margin: 0;
         padding: 0;
         color: $color-media-head;
         font-size: 2rem;
     }
-    .media p {
+     p {
         margin: 0;
         font-size: 1.5rem;
     }
-    .media img {
+    img {
         float: left;
         margin-right: 10px;
     }
-    .media a {
+     a {
         text-decoration: none;
         color: $text-color;
         text-transform: uppercase;
