using & and # (if) change the font color in one/part (_media.scss), some in .html

--- a/scss/modules/_media.scss
+++ b/scss/modules/_media.scss
@@ -22,6 +22,9 @@
         padding: 0;
         color: $color-media-head;
         font-size: 2rem;
+        #typography & {  //# - if
+color: $red;
+        }
     }
      p {
         margin: 0;
