--- a/css/style.css
+++ b/css/style.css
@@ -480,6 +480,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 2rem;
 }
 
+#typography .media .head {
+  color: #D14348;
+}
+
 .media p {
   margin: 0;
   font-size: 1.5rem;
