create grid with math operations - in _mixins.scss common math rule, .html-group imgs, _interfase.scss - rule for grid and @include imageGrids rule. Funny Grid

--- a/scss/_interface.scss
+++ b/scss/_interface.scss
@@ -30,3 +30,17 @@ $color-btn-cool: $blue;
     @extend %btn;//with % create a Shadow class
     background: $color-btn-cool;
 }
+
+.grid {
+    @include clearfix;
+    .item {
+        float: left;
+        @include imageGrid(5, 1%);
+    }
+    img {
+        display: block;
+        border-radius: 10px;
+        max-width: 100%;
+        height: auto;
+    }
+}
