--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,37 @@ h1, h2, h3, h4, h5, h6 {
   background: #0076A3;
 }
 
+.grid:before, .grid:after {
+  content: '';
+  display: table;
+}
+
+.grid:after {
+  clear: both;
+}
+
+.grid .item {
+  float: left;
+  width: 19.2%;
+}
+
+.grid .item:nth-child(n) {
+  margin-bottom: 1%;
+  margin-top: 1%;
+}
+
+.grid .item:nth-child(5n) {
+  margin-bottom: 0;
+  margin-top: o;
+}
+
+.grid img {
+  display: block;
+  border-radius: 10px;
+  max-width: 100%;
+  height: auto;
+}
+
 .background {
   color: #EEE8D6;
   margin: 20px 0;
