--- a/css/style.css
+++ b/css/style.css
@@ -534,4 +534,26 @@ h1, h2, h3, h4, h5, h6 {
   color: #022933;
   text-transform: uppercase;
 }
+
+.table {
+  font-size: 1.5rem;
+  text-align: left;
+  width: 100%;
+}
+
+.table caption {
+  font-size: 2.5rem;
+  text-align: left;
+  padding-bottom: 5px;
+}
+
+.table > thead > tr > th, .table > thead > tr > td, .table > tbody > tr > th, .table > tbody > tr > td, .table tfoot > tr > th, .table tfoot > tr > td {
+  padding: 10px;
+  border-bottom: 1px dotted #0076A3;
+}
+
+> thead, > tr {
+  background-color: #0076A3;
+  color: #EEE8D6;
+}
 /*# sourceMappingURL=style.css.map */
