--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ h1, h2, h3, h4, h5, h6 {
   cursor: pointer;
   border: none;
   border-radius: 4px;
-  font-family: "Oswald";
+  font-family: Oswald, helvetica, sans-serif;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -428,7 +428,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .grid img {
   display: block;
-  border-radius: 10px;
+  border-radius: 20px;
   max-width: 100%;
   height: auto;
 }
@@ -448,7 +448,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .background .container h1 {
   color: #e9cf3e;
-  font-family: "Oswald";
+  font-family: Oswald, helvetica, sans-serif;
   font-size: 5rem;
   line-height: 105%;
   margin-bottom: 0;
@@ -536,6 +536,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .table {
+  border-collapse: collapse;
   font-size: 1.5rem;
   text-align: left;
   width: 100%;
@@ -547,7 +548,19 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 5px;
 }
 
-.table > thead > tr > th, .table > thead > tr > td, .table > tbody > tr > th, .table > tbody > tr > td, .table tfoot > tr > th, .table tfoot > tr > td {
+.table > thead > tr:hover, .table > tbody > tr:hover, .table > tfoot > tr:hover {
+  background-color: #dfc5b2;
+}
+
+.table > thead > tr:nth-child(even), .table > tbody > tr:nth-child(even), .table > tfoot > tr:nth-child(even) {
+  background-color: rgba(233, 207, 62, 0.3);
+}
+
+.table > thead > tr:nth-child(even):hover, .table > tbody > tr:nth-child(even):hover, .table > tfoot > tr:nth-child(even):hover {
+  background-color: rgba(233, 207, 62, 0.3);
+}
+
+.table > thead > tr > th, .table > thead > tr > td, .table > tbody > tr > th, .table > tbody > tr > td, .table > tfoot > tr > th, .table > tfoot > tr > td {
   padding: 10px;
   border-bottom: 1px dotted #0076A3;
 }
@@ -555,5 +568,13 @@ h1, h2, h3, h4, h5, h6 {
 > thead, > tr {
   background-color: #0076A3;
   color: #EEE8D6;
+}
+
+> thead:hover, > tr:hover {
+  background-color: compliment(#0076A3);
+}
+
+> thead > th, > tr > th {
+  border-bottom: 0;
 }
 /*# sourceMappingURL=style.css.map */
