--- a/scss/modules/_tables.scss
+++ b/scss/modules/_tables.scss
@@ -12,16 +12,15 @@ $color-even-cells: transparentize($yellow, .7);
         padding-bottom: 5px;
     }
 
-    > thead, > tbody, tfoot {
+    > thead, > tbody, > tfoot {
         > tr {
-
             &:hover {
                 background-color: darken(adjust-hue($background, -20deg), 10%);
             }
             &:nth-child(even) {
-                background-color: $color-even-cells; //transparentize($yellow, .7);
+                background-color: $color-even-cells; //transparentize($yellow, .7);-put up
                 &:hover {
-                    background-color: opacity($color-even-cells, .3);
+                    background-color: transparentize($yellow, .7);//opacity($color-even-cells, .3);
                 }
             }
             > th, > td {
