use @conteiner - new -navigation.scss, common rule in _mixins.scss break for media query (brand, ul li)

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -31,3 +31,10 @@
         margin-right: 0;
     }    
 }
+
+// MEDIA QUERY RULE
+@mixin break($length) {
+    @media (min-width: $length) {
+        @content; 
+    }
+}
