--- a/css/style.css
+++ b/css/style.css
@@ -461,6 +461,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .jumbotron {
+  margin-top: 0;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.8))), url("../images/pier.jpg");
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)), url("../images/pier.jpg");
   background-repeat: no-repeat;
@@ -576,5 +577,85 @@ h1, h2, h3, h4, h5, h6 {
 
 > thead > th, > tr > th {
   border-bottom: 0;
+}
+
+header, footer {
+  background-color: #003f57;
+}
+
+footer .container {
+  margin: 0;
+}
+
+header nav {
+  background-color: #003f57;
+}
+
+nav .branding {
+  float: left;
+  display: none;
+}
+
+@media (min-width: 1000px) {
+  nav .branding {
+    display: block;
+  }
+}
+
+nav .breanding h1 {
+  font-size: 2.75rem;
+  overflow: hidden;
+  margin: 0;
+  color: #e9cf3e;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul:before, nav ul:after {
+  content: '';
+  display: table;
+}
+
+nav ul:after {
+  clear: both;
+}
+
+nav ul li {
+  padding: 10px 5px;
+}
+
+@media (min-width: 760px) {
+  nav ul li {
+    float: right;
+  }
+}
+
+nav ul li a {
+  font-size: 1.5rem;
+  text-decoration: none;
+  padding: 10px 5px;
+  color: #EEE8D6;
+}
+
+nav ul li a:hover {
+  color: #e9cf3e;
+}
+
+header nav ul li a:hover {
+  background-color: #002c3d;
+}
+
+footer nav ul li a {
+  color: white;
+}
+
+footer nav {
+  margin-top: 20px;
+  min-height: 200px;
+  background-color: #003f57;
 }
 /*# sourceMappingURL=style.css.map */
