--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .grid img {
   display: block;
-  border-radius: 20px;
+  border-radius: 20px 0px 20px 0px;
   max-width: 100%;
   height: auto;
 }
@@ -635,7 +635,7 @@ nav ul li {
 }
 
 nav ul li a {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   text-decoration: none;
   padding: 10px 5px;
   color: #EEE8D6;
@@ -657,5 +657,11 @@ footer nav {
   margin-top: 20px;
   min-height: 200px;
   background-color: #003f57;
+}
+
+@media (min-width: 0) and (max-width: 500px) {
+  footer nav {
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
