--- a/scss/modules/_navigation.scss
+++ b/scss/modules/_navigation.scss
@@ -48,7 +48,7 @@ nav {
     }
 
     ul li a {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         text-decoration: none;
         padding: 10px 5px;
         color: $background;
@@ -65,8 +65,11 @@ nav {
         }
     }
 footer & {
+    @include break(0, 500px) {
+        display: none;
+    }
     margin-top: 20px;
     min-height: 200px;
-    background-color:darken($blue, 15%);
+    background-color: darken($blue, 15%);
 }    
 }
