--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,10 @@ $darkblue:    #001e25;
 $red:         #D14348; //red;
 // $links: black;
 $blue:        #0076A3;
-$yellow:      rgb(233,207,62);//yellow;
+$green:       #548C27;
+$purple:      #6D73C2;
+$orange:      #F39856;
+$yellow:      #FFBA00; //rgb(233,207,62);//yellow;
 $font-body: 'Hepta Slab'; //need '' if space btwn words
 $font-headings: Oswald, helvetica, sans-serif; //create a list
 
