--- a/css/style.css
+++ b/css/style.css
@@ -360,8 +360,35 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #D14348;
   font-family: 'Oswald', sans-serif;
+}
+
+h1 {
+  color: #0076A3;
+}
+
+h2 {
+  color: #6D73C2;
+}
+
+h3 {
+  color: #548C27;
+}
+
+h4 {
+  color: #D14348;
+}
+
+h5 {
+  color: #D14348;
+}
+
+h6 {
+  color: #F39856;
+}
+
+h7 {
+  color: #FFBA00;
 }
 
 .container {
@@ -447,7 +474,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .background .container h1 {
-  color: #e9cf3e;
+  color: #FFBA00;
   font-family: Oswald, helvetica, sans-serif;
   font-size: 5rem;
   line-height: 105%;
@@ -493,7 +520,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .media .item:hover {
-  background: #e9cf3e;
+  background: #FFBA00;
 }
 
 .media .item:last-of-type {
@@ -554,11 +581,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .table > thead > tr:nth-child(even), .table > tbody > tr:nth-child(even), .table > tfoot > tr:nth-child(even) {
-  background-color: rgba(233, 207, 62, 0.3);
+  background-color: rgba(255, 186, 0, 0.3);
 }
 
 .table > thead > tr:nth-child(even):hover, .table > tbody > tr:nth-child(even):hover, .table > tfoot > tr:nth-child(even):hover {
-  background-color: rgba(233, 207, 62, 0.3);
+  background-color: rgba(255, 186, 0, 0.3);
 }
 
 .table > thead > tr > th, .table > thead > tr > td, .table > tbody > tr > th, .table > tbody > tr > td, .table > tfoot > tr > th, .table > tfoot > tr > td {
@@ -606,7 +633,7 @@ nav .breanding h1 {
   font-size: 2.75rem;
   overflow: hidden;
   margin: 0;
-  color: #e9cf3e;
+  color: #FFBA00;
 }
 
 nav ul {
@@ -642,7 +669,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: #e9cf3e;
+  color: #FFBA00;
 }
 
 header nav ul li a:hover {
