going through lists with @each and programmatically construct classes. _interface.scss

--- a/css/style.css
+++ b/css/style.css
@@ -414,15 +414,15 @@ h7 {
 }
 
 .btn-default {
-  background: #022933;
+  background-color: #022933;
 }
 
 .btn-hot {
-  background: #D14348;
+  background-color: #D14348;
 }
 
 .btn-cool {
-  background: #0076A3;
+  background-color: #0076A3;
 }
 
 .grid {
